--- a/style/style.css
+++ b/style/style.css
@@ -1,23 +1,4 @@
-@font-face {
-    font-family: "vazir_thin";
-    src: url(../src/fonts/Vazir-Thin-FD-WOL.woff2) format("woff2");
-}
-@font-face {
-    font-family: "vazir_medium";
-    src: url(../src/fonts/Vazir-Medium-FD-WOL.woff2) format("woff2");
-}
-@font-face {
-    font-family: "vazir_light";
-    src: url(../src/fonts/Vazir-Light-FD-WOL.woff2) format("woff2");
-}
-@font-face {
-    font-family: "vazir_bold";
-    src: url(../src/fonts/Vazir-Bold-FD-WOL.woff2) format("woff2");
-}
-
-* {
-    font-family: var(--font_medium);
-}
+/* Variables */
 
 :root {
     --white_color: #ffffff;
@@ -28,9 +9,150 @@
     --Grey3_color: #617d98;
     --Grey2_color: #9eb2c7;
     --Grey1_color: #f1f5f8;
-    --font_medium:  "vazir_medium";
-    --font_medium:  "vazir_medium";
+    --font_medium: "vazir_medium";
+    --font_medium: "vazir_medium";
     --transition: all 0.3s linear;
-    --light_shadow: 0 5px 15px rgba(0 ,0 ,0 ,0.1);
-    --dark_shadow: 0 5px 15px rgba(0 ,0 ,0 ,0.2);
+    --light_shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark_shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  }
+  
+/* Fonts */
+
+@font-face {
+  font-family: "vazir_thin";
+  src: url(../src/fonts/Vazir-Thin-FD-WOL.woff2) format("woff2");
+}
+@font-face {
+  font-family: "vazir_medium";
+  src: url(../src/fonts/Vazir-Medium-FD-WOL.woff2) format("woff2");
+}
+@font-face {
+  font-family: "vazir_light";
+  src: url(../src/fonts/Vazir-Light-FD-WOL.woff2) format("woff2");
+}
+@font-face {
+  font-family: "vazir_bold";
+  src: url(../src/fonts/Vazir-Bold-FD-WOL.woff2) format("woff2");
+}
+
+/* Global Styles */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+  font-family: var(--font_medium);
+  background-color: var(--white_color);
+  color: var(--Grey1_color);
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+
+a{
+    text-decoration: none;
+}
+
+img {
+    width: 100%;
+    display: block;
+}
+
+h1, h2, h3, h4 {
+    line-height: 1.25;
+    margin-bottom: 0.75rem;
+}
+
+p {
+    margin-bottom: 2.5rem;
+    color: var(--Grey2_color);
+}
+
+@media screen and (min-width: 800px) {
+    h2 {
+        font-size: 2.5rem;
+    }
+    h3 {
+        font-size: 1.75rem;
+    }
+    h4 {
+        font-size: 1rem;
+    }
+    body {
+        font-size: 1rem;
+    }
+    h1, h2, h3, h4 {
+        line-height: 1;
+    }
+}
+
+.btn {
+    background: var(--second_color);
+    color: var(--white_color);
+    display: inline-block;
+    transition: var(--transition);
+    font-size:  0.875rem;
+    border:  2px solid transparent;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover{
+    color: var(--main_color);
+    background-color: var(--white_color);
+}
+
+/* Hero Section */
+
+.hero{
+    min-height: 100vh;
+    background-color: var(--second_color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero_banner {
+    padding: 0 3rem;
+    text-align: center;
+}
+
+.hero_banner h1{
+   color: var(--white_color);
+   margin-bottom: 3rem;
+}
+
+.hero_banner p {
+    max-width: 35rem;
+    color: var(--white_color);
+    margin-bottom: 2rem;
+}
+
+.btn_hero {
+    padding: 0.5rem 1.2rem;
+    font-size: 1rem;
+    background: var(--second_color);
+    color: var(--white_color);
+}
+
+.btn_hero:hover {
+    background: transparent;
+    color: var(--white_color);
+    border-color: var(--white_color);
+}
+
+@media screen and (min-width: 768px) {
+    .hero {
+        background: linear-gradient(rgba(199, 125, 255, 0.7), rgba(0, 0, 0, 0.7)), url(../src/images/jpg/main.jpg) center/cover no-repeat;
+    }
+
+    .hero_banner {
+        padding: 0;
+    }
+
+    .hero_banner p{
+        max-width: 45rem;
+    }
 }
