--- a/style/style.css
+++ b/style/style.css
@@ -156,3 +156,9 @@ p {
         max-width: 45rem;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .hero {
+        background: linear-gradient(rgba(199, 125, 255, 0.7), rgba(0, 0, 0, 0.7)), url(../src/images/jpg/main.jpg) center/cover no-repeat;
+    }
+}
