--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,10 @@ a{
     text-decoration: none;
 }
 
+ul {
+    list-style-type: none;
+}
+
 img {
     width: 100%;
     display: block;
@@ -66,7 +70,7 @@ h1, h2, h3, h4 {
 }
 
 p {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
     color: var(--Grey2_color);
 }
 
@@ -96,12 +100,37 @@ p {
     font-size:  0.875rem;
     border:  2px solid transparent;
     cursor: pointer;
+    padding: 5px 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover{
     color: var(--main_color);
     background-color: var(--white_color);
+    border: solid 2px var(--main_color);
+}
+
+.section{
+    padding: 5rem 0;
+}
+
+.section_title {
+    text-align: center;
+    margin-bottom: 4rem;
+    color: var(--main_color);
+}
+
+.section_cnter{
+    width: 90vw;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 992px) {
+    .section_center {
+        width: 95vw;
+        max-width: 1170px;
+        margin: 0 auto;
+    }
 }
 
 /* Hero Section */
@@ -160,5 +189,54 @@ p {
 @media screen and (max-width: 768px) {
     .hero {
         background: linear-gradient(rgba(186, 125, 255, 0.7), rgba(0, 0, 0, 0.7)), url(../src/images/jpg/main.jpg) center/cover no-repeat;
+    }
+}
+
+/* About Section */
+
+.about_article_image {
+    margin-bottom: 2rem;
+}
+
+.about_info_title{
+    color: var(--Grey4_color);
+}
+
+@media screen and (min-width:992px) {
+    .about_center{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .about_article_image{
+        margin-bottom: 0;
+    }
+
+    .about_article_image, .about_info{
+        flex: 0 0 calc(50% - 2rem);
+        align-self: center;
+    }
+}
+
+@media screen and (min-width: 1170px) {
+    .about_article_image{
+        position: relative;
+    }
+    .about_article_image::before{
+        content: "";
+        border: 0.5rem solid var(--second_color);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        box-sizing: border-box;
+        top: -1rem;
+        right: -1rem;
+        z-index: -1;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .about_article_image, .about_info{
+        padding: 20px;
     }
 }
