--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,21 @@
 /* Variables */
 
 :root {
-    --white_color: #ffffff;
-    --main_color: #5a189a;
-    --second_color: #7b2cbf;
-    --there_color: #9d4edd;
-    --Grey4_color: #102a42;
-    --Grey3_color: #617d98;
-    --Grey2_color: #9eb2c7;
-    --Grey1_color: #f1f5f8;
-    --font_medium: "vazir_medium";
-    --font_medium: "vazir_medium";
-    --transition: all 0.3s linear;
-    --light_shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark_shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  }
-  
+  --white_color: #ffffff;
+  --main_color: #5a189a;
+  --second_color: #7b2cbf;
+  --there_color: #9d4edd;
+  --Grey4_color: #102a42;
+  --Grey3_color: #617d98;
+  --Grey2_color: #9eb2c7;
+  --Grey1_color: #f1f5f8;
+  --font_medium: "vazir_medium";
+  --font_medium: "vazir_medium";
+  --transition: all 0.3s linear;
+  --light_shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark_shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
 /* Fonts */
 
 @font-face {
@@ -38,9 +38,9 @@
 /* Global Styles */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -51,192 +51,267 @@ body {
   font-size: 0.875rem;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 img {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
-h1, h2, h3, h4 {
-    line-height: 1.25;
-    margin-bottom: 0.75rem;
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
 }
 
 p {
-    margin-bottom: 1.5rem;
-    color: var(--Grey2_color);
+  margin-bottom: 1.5rem;
+  color: var(--Grey3_color);
 }
 
 @media screen and (min-width: 800px) {
-    h2 {
-        font-size: 2.5rem;
-    }
-    h3 {
-        font-size: 1.75rem;
-    }
-    h4 {
-        font-size: 1rem;
-    }
-    body {
-        font-size: 1rem;
-    }
-    h1, h2, h3, h4 {
-        line-height: 1;
-    }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
 }
 
 .btn {
-    background: var(--second_color);
-    color: var(--white_color);
-    display: inline-block;
-    transition: var(--transition);
-    font-size:  0.875rem;
-    border:  2px solid transparent;
-    cursor: pointer;
-    padding: 5px 10px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  background: var(--second_color);
+  color: var(--white_color);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid transparent;
+  cursor: pointer;
+  padding: 5px 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-.btn:hover{
-    color: var(--main_color);
-    background-color: var(--white_color);
-    border: solid 2px var(--main_color);
+.btn:hover {
+  color: var(--main_color);
+  background-color: var(--white_color);
+  border: solid 2px var(--main_color);
 }
 
-.section{
-    padding: 5rem 0;
+.section {
+  padding: 5rem 0;
 }
 
 .section_title {
-    text-align: center;
-    margin-bottom: 4rem;
-    color: var(--main_color);
+  text-align: center;
+  margin-bottom: 4rem;
+  color: var(--main_color);
 }
 
-.section_cnter{
-    width: 90vw;
-    margin: 0 auto;
+.section_cnter {
+  width: 90vw;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 992px) {
-    .section_center {
-        width: 95vw;
-        max-width: 1170px;
-        margin: 0 auto;
-    }
+  .section_center {
+    width: 95vw;
+    max-width: 1170px;
+    margin: 0 auto;
+  }
 }
 
 /* Hero Section */
 
-.hero{
-    min-height: 100vh;
-    background-color: var(--second_color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.hero {
+  min-height: 100vh;
+  background-color: var(--second_color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero_banner {
-    padding: 0 3rem;
-    text-align: center;
+  padding: 0 3rem;
+  text-align: center;
 }
 
-.hero_banner h1{
-   color: var(--white_color);
-   margin-bottom: 3rem;
+.hero_banner h1 {
+  color: var(--white_color);
+  margin-bottom: 3rem;
 }
 
 .hero_banner p {
-    max-width: 35rem;
-    color: var(--white_color);
-    margin-bottom: 2rem;
+  max-width: 35rem;
+  color: var(--white_color);
+  margin-bottom: 2rem;
 }
 
 .btn_hero {
-    padding: 0.5rem 1.2rem;
-    font-size: 1rem;
-    background: var(--second_color);
-    color: var(--white_color);
+  padding: 0.5rem 1.2rem;
+  font-size: 1rem;
+  background: var(--second_color);
+  color: var(--white_color);
 }
 
 .btn_hero:hover {
-    background: transparent;
-    color: var(--white_color);
-    border-color: var(--white_color);
+  background: transparent;
+  color: var(--white_color);
+  border-color: var(--white_color);
 }
 
 @media screen and (min-width: 768px) {
-    .hero {
-        background: linear-gradient(rgba(186, 125, 255, 0.7), rgba(0, 0, 0, 0.7)), url(../src/images/jpg/main.jpg) center/cover no-repeat;
-    }
+  .hero {
+    background: linear-gradient(rgba(186, 125, 255, 0.7), rgba(0, 0, 0, 0.7)),
+      url(../src/images/jpg/main.jpg) center/cover no-repeat;
+  }
 
-    .hero_banner {
-        padding: 0;
-    }
+  .hero_banner {
+    padding: 0;
+  }
 
-    .hero_banner p{
-        max-width: 45rem;
-    }
+  .hero_banner p {
+    max-width: 45rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .hero {
-        background: linear-gradient(rgba(186, 125, 255, 0.7), rgba(0, 0, 0, 0.7)), url(../src/images/jpg/main.jpg) center/cover no-repeat;
-    }
+  .hero {
+    background: linear-gradient(rgba(186, 125, 255, 0.7), rgba(0, 0, 0, 0.7)),
+      url(../src/images/jpg/main.jpg) center/cover no-repeat;
+  }
 }
 
 /* About Section */
 
 .about_article_image {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
-.about_info_title{
-    color: var(--Grey4_color);
+.about_info_title {
+  color: var(--Grey4_color);
 }
 
-@media screen and (min-width:992px) {
-    .about_center{
+@media screen and (min-width: 992px) {
+  .about_center {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .about_article_image {
+    margin-bottom: 0;
+  }
+
+  .about_article_image,
+  .about_info {
+    flex: 0 0 calc(50% - 2rem);
+    align-self: center;
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  .about_article_image {
+    position: relative;
+  }
+  .about_article_image::before {
+    content: "";
+    border: 0.5rem solid var(--second_color);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    box-sizing: border-box;
+    top: -1rem;
+    right: -1rem;
+    z-index: -1;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .about_article_image,
+  .about_info {
+    padding: 20px;
+  }
+}
+
+/* Services Section */
+
+.services {
+  background-color: var(--Grey1_color);
+}
+
+.service {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.service_icon {
+  background-color: var(--second_color);
+  color: var(--white_color);
+  font-size: 2rem;
+  padding: 0.5rem;
+  margin-bottom: 1.5rem;
+  display: inline-block;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+}
+
+.service_text {
+    max-width: 20rem;
+    margin: 0 auto;
+    color: var(--Grey3_color);
+}
+
+@media screen and (min-width: 576px) {
+    .services_center{
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
     }
-
-    .about_article_image{
-        margin-bottom: 0;
+    .service {
+        flex: 0 0 calc(50% - 1rem);
     }
+}
 
-    .about_article_image, .about_info{
-        flex: 0 0 calc(50% - 2rem);
-        align-self: center;
+@media screen and (min-width: 992px) {
+    .service{
+        flex: 0 0 calc(33.33% - 1rem);
     }
 }
 
 @media screen and (min-width: 1170px) {
-    .about_article_image{
-        position: relative;
+    .service{
+        display: flex;
+        text-align: center;
     }
-    .about_article_image::before{
-        content: "";
-        border: 0.5rem solid var(--second_color);
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        box-sizing: border-box;
-        top: -1rem;
-        right: -1rem;
-        z-index: -1;
-    }
-}
 
-@media screen and (max-width: 992px) {
-    .about_article_image, .about_info{
-        padding: 20px;
+    .service_info {
+        padding-right: 0.75rem;
+    }
+
+    .service_icon{
+        align-self: flex-start;
+    }
+
+    .service_title {
+        margin-bottom: 0.5rem;
     }
 }
