--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,7 @@ p {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: 3rem 2rem ;
 }
 
 .section_title {
@@ -314,4 +314,83 @@ p {
     .service_title {
         margin-bottom: 0.5rem;
     }
+}
+
+ /* Articles Section */
+
+.article-card {
+  background: var(--Grey_color);
+  margin-bottom: 2rem;
+  box-shadow: var(--light_shadow);
+  transition: var(--transition);
+}
+
+.article-card:hover {
+  box-shadow: var(--dark_shadow);
+  transform: scale(1.02);
+}
+
+.article-img-container {
+  position: relative;
+}
+
+.article-img {
+  height: 15rem;
+  object-fit: cover;
+}
+
+.article-category {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background: var(--main_color);
+  color: var(--white_color);
+  padding: 0.25rem 0.5rem;
+  margin-bottom: 0;
+}
+
+.article-info {
+  padding: 1.25rem 1.5rem;
+}
+
+.article-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.article-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.article-footer p {
+  margin-bottom: 0;
+  color: var(--main_color);
+}
+
+.article-footer a {
+  color: var(--main_color);
+}
+
+.article-btn {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .articles-center {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between
+  }
+
+  .article-card {
+      flex: 0 0 calc(50% - 2rem)
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  .article-card {
+      flex: 0 0 calc(33.333% - 2rem)
+  }
 }
