--- a/style/style.css
+++ b/style/style.css
@@ -394,3 +394,60 @@ p {
       flex: 0 0 calc(33.333% - 2rem)
   }
 }
+
+/* Contact Section */
+
+.contact {
+  background: var(--second_color);
+}
+
+.contact-title, .contact-title p {
+  color: var(--white_color);
+}
+
+.contact-form {
+  display: flex;
+  font-family: var(--font_medium);
+}
+
+.form-control {
+  flex: 1 1 auto;
+  color: var(--Grey3_color);
+}
+
+.form-control, .btn-submit {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border: transparent;
+}
+
+.form-control::placeholder {
+  font-family: var(--main_color);
+  color: inherit;
+}
+
+.btn-submit {
+  font-family: var(--main_color);
+  background: var(--Grey4_color);
+  color: var(--white_color);
+  cursor: pointer;
+  transition: var(--transition);
+  font-family: var(--font_medium);
+}
+
+.btn-submit:hover {
+  background: var(--main_color);
+}
+
+@media screen and (min-width: 992px) {
+  .contact-center {
+      display: flex;
+      gap: 2rem;
+  }
+
+  .contact-form {
+      align-self: flex-start;
+      flex: 1 1 auto;
+      font-family: var(--font_medium);
+  }
+}
