--- a/style/style.css
+++ b/style/style.css
@@ -451,3 +451,52 @@ p {
       font-family: var(--font_medium);
   }
 }
+
+/* Gallery Section  */
+
+.gallery-img-container {
+  position: relative;
+  background: var(--main_color);
+}
+
+.gallery-img {
+  height: 17rem;
+  object-fit: cover;
+  transition: var(--transition);
+}
+
+.gallery-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: var(--white_color);
+  font-size: 2rem;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: var(--transition);
+}
+
+.gallery-img-container:hover .gallery-img {
+  opacity: 0.5;
+}
+
+.gallery-img-container:hover .gallery-icon {
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-center {
+      display: flex;
+      flex-wrap: wrap;
+  }
+
+  .gallery-img-container {
+      flex: 0 0 50%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .gallery-img-container {
+      flex: 0 0 25%;
+  }
+}
